Сделал функционал профиля игрока

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <input class="visually-hidden" id="upload-avatar" type="file" name="avatar">
                 <span class="profile-settings__upload-button">Загрузить свой аватар</span>
               </label>
-              <input class="profile-settings__player-name" type="text" name="player-name" minlength="3" maxlength="25" required>
+              <input class="profile-settings__player-name" type="text" name="player-name" autocomplete="off" autocorrect="off" minlength="3" maxlength="25" required>
               <div class="profile-settings__controls">
                 <button class="profile-settings__save-button" type="submit">Сохранить</button>
                 <button class="profile-settings__reset-button" type="reset">Отмена</button>
